[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Mode_Jeu/SauvKi_Piou.gd" type="Script" id=1]
[ext_resource path="res://Misc/MenuBackground.jpeg" type="Texture" id=2]
[ext_resource path="res://Misc/zh-cn.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Mode_Jeu/Score.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Mode_Jeu/Countdown.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MenuPause.tscn" type="PackedScene" id=6]
[ext_resource path="res://Themes/Style/Fantasy/Default/Panel/panel-022.png" type="Texture" id=7]
[ext_resource path="res://Themes/Style/bugtouch_theme.tres" type="Theme" id=8]
[ext_resource path="res://Themes/fonts/Pixelme.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/Mode_Jeu/Score_Equipe_1.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Mode_Jeu/Score_Equipe_2.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=17]
size = 31
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 18.4414
margin_right = 20.5929
modulate_color = Color( 0.262745, 0.266667, 0.388235, 1 )

[sub_resource type="DynamicFont" id=20]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 24.3838
margin_right = 15.6056
modulate_color = Color( 0.262745, 0.266667, 0.388235, 1 )

[node name="Jeu" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="LabelTemps" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.0
margin_top = 8.0
margin_right = 98.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "00 : 00"
align = 1
valign = 1

[node name="Score" type="Label" parent="TextureRect"]
margin_left = 6.0
margin_top = 8.0
margin_right = 295.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Score : 0"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="TimerSpawn" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Countdown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true
script = ExtResource( 5 )

[node name="EndScreen" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="ScoreLabel" type="Label" parent="EndScreen"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.5
margin_top = 218.0
margin_right = 147.5
margin_bottom = 284.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 19 )
text = "Score : "
align = 1
valign = 1

[node name="Rejouer" type="Button" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -21.5
margin_right = 124.5
margin_bottom = 31.5
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Rejouer"

[node name="ReturnButton" type="Button" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 59.0
margin_right = 125.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Menu Princiapal"

[node name="ScoreLabel_1" type="Label" parent="EndScreen"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 146.0
margin_right = 148.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 19 )
text = "Score : "
align = 1
valign = 1

[node name="ScoreLabel_2" type="Label" parent="EndScreen"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 218.0
margin_right = 148.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 19 )
text = "Score : "
align = 1
valign = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="MenuPause" parent="CanvasLayer" instance=ExtResource( 6 )]
mouse_filter = 1

[node name="Control_Equipe" type="Control" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 81.0

[node name="Score_Equipe_1" type="Label" parent="Control_Equipe"]
margin_left = 6.0
margin_top = 8.0
margin_right = 332.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Equipe 1 : 0"
align = 1
valign = 1
script = ExtResource( 10 )

[node name="Score_Equipe_2" type="Label" parent="Control_Equipe"]
margin_left = 947.0
margin_top = 8.0
margin_right = 1274.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Equipe 2 : 0"
align = 1
valign = 1
script = ExtResource( 11 )

[connection signal="timeout" from="TimerSpawn" to="." method="_on_TimerSpawn_timeout"]
[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]
[connection signal="pressed" from="EndScreen/Rejouer" to="." method="_on_Rejouer_pressed"]
[connection signal="pressed" from="EndScreen/ReturnButton" to="." method="_on_ReturnButton_pressed"]
